# noise_dev_mcp

./: .devcontainer  LICENSE  README.md  exampleUsage.js  generateNewsDataset.js  mkdocs.yaml  package-lock.json  package.json  pyproject.toml
.github/: generate-docs
data/: mixedNewsData.json
gradio-mcp-ui/: .gitignore  README.md  demo.py  pyproject.toml  run.sh  test_run.py  verify_ui.py
gradio-mcp-ui/servers/: config.yaml  example_server.py
gradio-mcp-ui/src/: __init__.py  main.py  mcp_manager.py
gradio-mcp-ui/src/ui/: __init__.py  chat_interface.py  chat_interface.py.backup
gradio-mcp-ui/src/utils/: __init__.py  logging.py
