[project]
name = "gradio-mcp-ui"
version = "0.1.0"
description = "A Gradio-based UI for interacting with multiple MCP servers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.0.0",
    "fastmcp>=0.4.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "aiofiles>=24.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.5.0",
]
docs = [
    "griffe>=1.5.1",
    "mkdocs>=1.6.1",
    "mkdocs-awesome-pages-plugin>=2.9.3",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-material>=9.5.44",
    "mkdocs-section-index>=0.3.8",
    "mkdocstrings[python]>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
