[project]
name = "gradio-mcp-ui"
version = "0.1.0"
description = "A Gradio-based UI for interacting with multiple MCP servers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.0.0",
    "fastmcp>=0.4.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "aiofiles>=24.0.0",
    "aiohttp>=3.12.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
